--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -93,7 +93,7 @@
                             </button></div>
                     </div>
                 </div>
-                <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-2.svg" alt="Speaker Diversity" class="img-fluid"></div>
+                <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="../img/about-us-2.svg" alt="Speaker Diversity" class="img-fluid"></div>
 
             </div>
         </div>
