Fix privacy policy link

--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -16,7 +16,7 @@
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./terms-and-conditions#privacy-policy.html">
+                    <a href="./terms-and-conditions.html#privacy-policy">
                         <%= __('Privacy Policy') %>
                     </a>
                 </div>
