| Priyanshu |hide placeholder in badges-info.ejs

--- a/views/badge-info.ejs
+++ b/views/badge-info.ejs
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="row mx-lg-5 my-3">
-        <p class="col-12 col-lg-8 h5 font-weight-light-lg font-weight-normal-sm lh-7 text-justify">
+        <p class="col-12 col-lg-8 h5 font-weight-light-lg font-weight-normal-sm lh-7 text-justify d-none">
             <%= __('Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate') %></p>
     </div>
     <div><span class="spinner d-none" id="#loader1"></span></div>
