--- a/views/modals/badge_milestone.ejs
+++ b/views/modals/badge_milestone.ejs
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row mt-5 d-none">
     <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
         <div class="row">
             <div class="spree-ribbon col-5">
