--- a/views/modals/thankyou_milestone.ejs
+++ b/views/modals/thankyou_milestone.ejs
@@ -11,16 +11,16 @@
         <div class="row justify-content-center my-2">
             <div class="col-12 text-center bg-white">
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://boloindia.nplt.in/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
-                    <img src="/img/fb-icon.svg" width="24px" alt="Share on Facebook">
+                    <img src="../img/fb-icon.svg" width="24px" alt="Share on Facebook">
                 </a><span>&sdot;</span>
                 <a id="linkedin_share" href="https://www.linkedin.com/shareArticle?mini=true&url=https://boloindia.nplt.in/&title=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications.&summary=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?/&source=" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
-                    <img src="/img/linkedin-icon.svg" width="24px" alt="Share on LinkedIn">
+                    <img src="../img/linkedin-icon.svg" width="24px" alt="Share on LinkedIn">
                 </a><span>&sdot;</span>
                 <a id="twitter_share" href="https://twitter.com/intent/tweet?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
-                    <img src="/img/twitter-icon.svg" width="24px" alt="Share on Twitter">
+                    <img src="../img/twitter-icon.svg" width="24px" alt="Share on Twitter">
                 </a><span>&sdot;</span>
                 <a id="whatsapp_share" href="https://api.whatsapp.com/send?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
-                    <img src="/img/whatsapp.svg" width="32px" alt="Share on Whatsapp">
+                    <img src="../img/whatsapp.svg" width="32px" alt="Share on Whatsapp">
                 </a>
             </div>
         </div>
