|Priyanshu+Umair| Increase skip button size

--- a/views/record.ejs
+++ b/views/record.ejs
@@ -16,7 +16,7 @@
 <body> <%- include common/headerForContributor.ejs %>
 <div id="loader" class="overlay__content"><span class="spinner"></span></div>
 <div id="page-content" class="d-none">
-    <div id="content-wrapper" class="container-fluid d-flex flex-column pt-1 pb-1">
+    <div id="content-wrapper" class="container-fluid d-flex flex-column">
         <%- include modals/recording-instructions.ejs %>
         <div class="d-flex justify-content-end pt-3 record-btn-container">
             <div class="report-btn-container">
