--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -20,20 +20,20 @@
 <body>
     <%- include common/headerForContributor.ejs %>
         <div id="validator-page-content">
-            <div class="container-fluid pt-1 pb-1">
-                <div class="row justify-content-end">
-                    <div class="report-btn-container">
-                        <button class="btn" id="report_btn" type="button">
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M9 11V5H11V11H9Z" fill="#959595"/>
-                                <path d="M10 14C10.5523 14 11 13.5523 11 13C11 12.4477 10.5523 12 10 12C9.44771 12 9 12.4477 9 13C9 13.5523 9.44771 14 10 14Z" fill="#959595"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.73576 19.6474L6.67338 17.0042C7.71408 17.3253 8.83372 17.5 10 17.5C15.5228 17.5 20 13.5825 20 8.75C20 3.91751 15.5228 0 10 0C4.47715 0 0 3.91751 0 8.75C0 10.8465 0.842648 12.7708 2.24776 14.2777L1.73576 19.6474ZM3.28595 13.9248L2.97914 13.5957C1.72877 12.2548 1 10.5683 1 8.75C1 4.59105 4.89983 1 10 1C15.1002 1 19 4.59105 19 8.75C19 12.909 15.1002 16.5 10 16.5C8.93371 16.5 7.91345 16.3403 6.96822 16.0486L6.5694 15.9256L2.9083 17.8854L3.28595 13.9248Z" fill="#959595"/>
-                            </svg>
-                            <%= __('Report') %>
-                        </button>
+            <div class="container-fluid">
+                <div id="content-wrapper" class="d-flex flex-column">
+                    <div class="row justify-content-end">
+                        <div class="report-btn-container">
+                            <button class="btn" id="report_btn" type="button">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M9 11V5H11V11H9Z" fill="#959595"/>
+                                    <path d="M10 14C10.5523 14 11 13.5523 11 13C11 12.4477 10.5523 12 10 12C9.44771 12 9 12.4477 9 13C9 13.5523 9.44771 14 10 14Z" fill="#959595"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M1.73576 19.6474L6.67338 17.0042C7.71408 17.3253 8.83372 17.5 10 17.5C15.5228 17.5 20 13.5825 20 8.75C20 3.91751 15.5228 0 10 0C4.47715 0 0 3.91751 0 8.75C0 10.8465 0.842648 12.7708 2.24776 14.2777L1.73576 19.6474ZM3.28595 13.9248L2.97914 13.5957C1.72877 12.2548 1 10.5683 1 8.75C1 4.59105 4.89983 1 10 1C15.1002 1 19 4.59105 19 8.75C19 12.909 15.1002 16.5 10 16.5C8.93371 16.5 7.91345 16.3403 6.96822 16.0486L6.5694 15.9256L2.9083 17.8854L3.28595 13.9248Z" fill="#959595"/>
+                                </svg>
+                                <%= __('Report') %>
+                            </button>
+                        </div>
                     </div>
-                </div>
-                <div id="content-wrapper" class="d-flex flex-column justify-content-center">
                     <div class="row justify-content-center" id="instructions-row">
                         <div id="instructions-link" class="d-flex justify-content-end align-items-center d-none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#007BFF" style="cursor:pointer" class="bi bi-info-circle-fill d-none" viewBox="0 0 16 16">
                                 <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
@@ -41,7 +41,7 @@
                                 <%= __('Instructions') %>
                             </span></div>
                     </div>
-                    <div class="row justify-content-center mb-5 mb-lg-0" id="sentences-row">
+                    <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="sentences-row">
                         <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
                     </div>
                     <div class="validation-container" id="validation-container">
@@ -114,7 +114,7 @@
                                 </svg></button>
                         </div>
                     </div>
-                    <div class="row justify-content-center" id="skip_btn_row"><button class="btn text-primary mt-2 mb-2" id="skip_button">
+                    <div class="row justify-content-center" id="skip_btn_row"><button class="btn text-primary mt-2 mb-2 fs-1_5-rem" id="skip_button">
                             <%= __('Skip') %>
                         </button></div>
                     <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
