--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -32,7 +32,7 @@
                 <p id="hour-value" class="mb-0">0</p>
                 <div><span class="spinner"></span></div>
             </b><b></b></div>
-        <div class="col-12 col-sm-6 text-left align-self-sm-center align-self-start"><img src="/img/thanks.svg" class="img-fluid w-100" alt="Total Sentence Progress">
+        <div class="col-12 col-sm-6 text-left align-self-sm-center align-self-start"><img src="../img/thanks.svg" class="img-fluid w-100" alt="Total Sentence Progress">
             <div class="bg-primary position-absolute rounded-pill" id="total-progress"></div>
             <div class="position-absolute rounded-pill" id="total-progress-bulb"></div>
         </div>
@@ -53,7 +53,7 @@
                 <h4 class="mb-3"><%- __('You are driving the spirit of your language') %></h4>
             </div>
             <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
-            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="/badges">Know more</a>') %></p>
+            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
             <%- include modals/badge_milestone.ejs %>
             <div class="mt-5 text-center">
                 <%= __('Share it with your friends and family') %>
@@ -76,16 +76,16 @@
             </div>
             <div class="badges_information">
                 <button class="m-0 p-0 btn border-0 cursor-pointer" disabled="disabled" data-badge="bronze" href="#" id="bronze_badge_link">
-                    <img title="Download Bronze Badge" src="./img/badge_disabled.svg" alt="">
+                    <img title="Download Bronze Badge" src="../img/badge_disabled.svg" alt="">
                 </button>
                 <button class="m-0 p-0 btn border-0 cursor-pointer" disabled="disabled" data-badge="silver" href="#" id="silver_badge_link">
-                    <img title="Download Silver Badge" src="./img/badge_disabled.svg" alt="">
+                    <img title="Download Silver Badge" src="../img/badge_disabled.svg" alt="">
                 </button>
                 <button class="m-0 p-0 btn border-0 cursor-pointer" disabled="disabled" data-badge="gold" href="#" id="gold_badge_link">
-                    <img title="Download Gold Badge" src="./img/badge_disabled.svg" alt="">
+                    <img title="Download Gold Badge" src="../img/badge_disabled.svg" alt="">
                 </button>
                 <button class="m-0 p-0 btn border-0 cursor-pointer" disabled="disabled" data-badge="platinum" href="#" id="platinum_badge_link">
-                    <img title="Download Platinum Badge" src="./img/badge_disabled.svg" alt="">
+                    <img title="Download Platinum Badge" src="../img/badge_disabled.svg" alt="">
                 </button>
             </div>
         </div>
