--- a/assets/css/badges.css
+++ b/assets/css/badges.css
@@ -1,3 +1,15 @@
+body {
+    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+html {
+    scroll-behavior: smooth;
+}
+html {
+    font-size: 10px;
+}
+.display-5 {
+    font-size: 2rem;
+}
 h1,
 h2,
 h3,
@@ -12,10 +24,6 @@ h6,
 .h6 {
     font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
-}
-
-.lh-7 {
-    line-height: 1.7;
 }
 @media (min-width: 321px) {
     html {
@@ -40,6 +48,118 @@ h6,
     }
 }
 
+@media (max-width: 768px) {
+    .font-weight-normal-sm {
+        font-weight: 400 !important;
+    }
+    .mt-xs-5{
+        margin-top: 5rem;
+    }
+}
+@media (min-width: 768px) {
+    .font-weight-light-lg {
+        font-weight: 300 !important;
+    }
+}
+@media (min-width: 992px) {
+    html {
+        font-size: 15px;
+    }
+}
+
+@media (min-width: 1200px) {
+    html {
+        font-size: 16px;
+    }
+    .display-5 {
+        font-size: 2.8rem;
+    }
+}
+@media (min-width: 1300px) {
+    .display-5 {
+        font-size: 3rem;
+    }
+}
+@media (min-width: 1400px) {
+    html {
+        font-size: 17px;
+    }
+}
+* {
+    box-sizing: border-box;
+}
+.pb-6 {
+    padding-bottom: 6rem;
+}
+.pt-6 {
+    padding-top: 6rem;
+}
+.p-4-5 {
+    padding: 2rem;
+}
+.mb-6 {
+    margin-bottom: 6rem;
+}
+.mt-n6 {
+    margin-top: -6rem;
+}
+.lh-7 {
+    line-height: 1.7;
+}
+.lh-5 {
+    line-height: 1.5;
+}
+
+.font-wt-900 {
+    font-weight: 900;
+}
+.site-blue {
+    color: #11223f;
+}
+.border-3 {
+    border: 3px solid #007bff;
+}
+.bg-light-blue {
+    background-color: #fbfcff;
+}
+.bg-blue {
+    background-color: #3f80ff;
+}
+.opc-4 {
+    opacity: 0.4;
+}
+.point-none {
+    pointer-events: none;
+}
+.outline-0 {
+    outline: 0;
+}
+.form-control.is-invalid {
+    background-image: none;
+}
+.cursor-pointer {
+    cursor: pointer;
+}
+.oflow-x-hid {
+    overflow-x: hidden;
+}
+.w-90 {
+    width: 90% !important;
+}
+
+.px-6 {
+    padding-right: 6vw !important;
+    padding-left: 6vw !important;
+}
+
+@media screen and (max-width: 480px) {
+    .mt-xs-5 {
+        margin-top: 5rem;
+    }
+    .fs-h4 {
+        font-size: 1.5rem;
+    }
+}
 
 .card{
     background: #FFFFFF;
@@ -64,6 +184,12 @@ h6,
     padding-left: 16px !important;
 }
 
+@media (max-width: 768px) {
+    .font-weight-normal-sm {
+        font-weight: 300 !important;
+    }
+}
+
 @media (max-width: 320px) {
     h1{
         font-size: 32px;
@@ -78,12 +204,6 @@ h6,
     }
     .table-responsive-xs > .table-bordered {
         border: 0;
-    }
-}
-
-@media (max-width: 768px) {
-    .font-weight-normal-sm {
-        font-weight: 300 !important;
     }
 }
 
