--- a/views/badge-info.ejs
+++ b/views/badge-info.ejs
@@ -19,7 +19,7 @@
 <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
     <div class="row mx-lg-5">
         <div class="col-12">
-            <h1><%= __('Levels and Badging @BoloIndia') %></h1>
+            <h1><%= __('Levels and Badging') %></h1>
         </div>
     </div>
     <div class="row mx-lg-5 my-3">
