|Raunak| coach marks next button disabled issue fix

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -207,6 +207,10 @@ h6,
   max-width: max-content;
 }
 
+.tour-tour .disabled {
+  pointer-events: none;
+}
+
 .spinner {
   width: 3rem;
   height: 3rem;
