--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -41,10 +41,10 @@
     <div class="row mt-5">
         <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
             <div id="champion_text" class="champion-ribbon d-none">
-                <span><%= __('You are a champion') %></span>
+                <span class="marquee"><%= __('You are a champion') %></span>
             </div>
             <div id="spree_text" class="spree-ribbon col-5 d-none">
-                <span><%= __('You are on a spree !!') %></span>
+                <span class="marquee"><%= __('You are on a spree !!') %></span>
             </div>
             <div id="contribution_text" class="d-none">
                 <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('WooHoo!! You took the first important step') %></h4>
