--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages.')%>">
     <meta property="og:type" content="website">
-    <meta name="description" property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?')%>">
+    <meta property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?')%>">
     <meta property="og:site_name" content="Bolo India ">
     <meta property="og:url" content="https://boloindia.nplt.in">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
