| priyanshu| updates milestone for getting rewards

--- a/views/badge-info.ejs
+++ b/views/badge-info.ejs
@@ -40,14 +40,14 @@
         <table class="table table-bordered table-striped table-responsive-xs text-center mx-3 w-100">
             <thead class="thead-dark">
             <tr>
-                <th scope="col v-align-center"><%= __('Level') %></th>
-                <th scope="col v-align-center">
+                <th scope="col "><%= __('Level') %></th>
+                <th scope="col ">
                     <p>
                     </p><p><%= __('Contributions') %></p>
                     <p><%= __('(Recording + Validating)') %></p>
                     <p></p>
                 </th>
-                <th scope="col v-align-center"><%= __('Badge') %></th>
+                <th scope="col "><%= __('Badge') %></th>
             </tr>
             </thead>
             <tbody id="table-rows"></tbody>
