--- a/views/modals/badge_milestone.ejs
+++ b/views/modals/badge_milestone.ejs
@@ -1,7 +1,7 @@
 <div class="row d-none" id="milestone_text">
     <div class="col-12 col-lg-5 col-md-5 mt-lg-5 justify-content-between">
         <div>
-            <img src="./img/bronze_badge.svg" alt="Bronze Badge" id="reward-img" class="reward-img">
+            <img src="../img/bronze_badge.svg" alt="Bronze Badge" id="reward-img" class="reward-img">
         </div>
         <p class="mt-2"><%= __('National Language Translation Mission')%></p>
         <button class="btn btn-outline-primary my-2" data-badge="" download id="download_pdf"><span class="mr-2"><%= __('Download')%></span>
@@ -14,7 +14,7 @@
     <div class="col-12 col-lg-7 col-md-7 msg-box mt-5">
         <h4 class="mb-3"><%- __('WoaaH!! You’ve earned your <span id="current_badge_name"></span> Badge') %></h4>
         <p><span id="user-contribution" class="text-primary"></span> <%- __('<span id="current_badge_name_1"></span> Contributor level achieved for contributing <span id="current_badge_count"></span> sentences.') %></p>
-        <p><%- __('Your next goal is to reach <span id="next_badge_count"></span> sentences to unlock your <span id="next_badge_name_1"></span> Badge. <a href="/badges">Know more</a>') %></p>
+        <p><%- __('Your next goal is to reach <span id="next_badge_count"></span> sentences to unlock your <span id="next_badge_name_1"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
     </div>
 </div>
 
