| priyanshu| adding translation for linkedIn title

--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -5,7 +5,7 @@
     <title>Bolo India: A crowdsourcing initiative for Indian languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages.')%>">
+    <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages')%>">
     <meta property="og:type" content="website">
     <meta property="og:description" content="I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?">
     <meta property="og:site_name" content="Bolo India ">
