--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -47,7 +47,38 @@ h6,
     font-size: 14px;
   }
 }
-@media (min-width: 672px) {
+
+
+
+
+@media screen and (min-width: 1024px) {
+  .card {
+    background-size:785px auto;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .card {
+    background-size:961.656px auto;
+  }
+}
+
+@media screen and (min-width: 1360px) {
+  .card {
+    background-size:1060px auto;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .card {
+    background-size:1127px auto;
+  }
+}
+
+@media screen and (min-width: 1536px) {
+  .card {
+    background-size:1420px auto;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -81,6 +112,10 @@ h6,
   .font-weight-light-lg {
     font-weight: 300 !important;
   }
+
+  .card {
+    background-size:615px auto;
+  }
 }
 @media (min-width: 992px) {
   html {
@@ -91,7 +126,8 @@ h6,
     max-width: 700px;
   }
   .card{
-    height: 450px;
+    height: 400px;
+    background-size:757px auto;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1279px) {
@@ -115,12 +151,12 @@ h6,
 }
 @media (min-width: 1300px) {
   .display-5 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 }
 @media (min-width: 1400px) {
   html {
-    font-size: 17px;
+    font-size: 16px;
   }
 }
 * {
@@ -275,12 +311,18 @@ body.modal-open .supreme-container {
   background-color: #42B2C6;
   border-radius: 50%;
   box-shadow: 0px 0px 12px 8px rgb(105 203 220 / 40%);
+  justify-self: right;
+  width: 120px;
+  height: auto;
 }
 
 .listen-logo{
   background: #4D82F7;
   border-radius: 50%;
   box-shadow: 0px 0px 12px 8px rgba(102, 176, 255, 0.4);
+  justify-self: right;
+  width: 120px;
+  height: auto;
 }
 
 @media (min-width: 1000px) {
@@ -292,11 +334,20 @@ body.modal-open .supreme-container {
 
 .card{
   /*background: #FFFFFF;*/
-  background-image: url("https://static.vecteezy.com/system/resources/previews/000/204/357/large_2x/vector-abstract-wave-design.jpg");
+  background-image: url("../img/NEW-WAVE.svg");
   mix-blend-mode: normal;
   box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   min-height: 100px;
+  background-repeat: no-repeat;
+}
+
+.card2 {
+  background-position: right bottom;
+}
+
+.card1 {
+  background-position: left bottom;
 }
 
 #topLanguageSpinner, #chartSpinner {
@@ -399,5 +450,10 @@ body.modal-open .supreme-container {
   #start_recording, #start_validating {
     width: 64px;
   }
+}
+
+.card_container.col-10{
+  flex: 0 0 90%;
+  max-width: 90%;
 }
 
