--- a/views/badge-info.ejs
+++ b/views/badge-info.ejs
@@ -41,12 +41,7 @@
             <thead class="thead-dark">
             <tr>
                 <th scope="col "><%= __('Level') %></th>
-                <th scope="col ">
-                    <p>
-                    </p><p><%= __('Contributions') %></p>
-                    <p><%= __('(Recording + Validating)') %></p>
-                    <p></p>
-                </th>
+                <th scope="col "><%= __('Contributions') %></th>
                 <th scope="col "><%= __('Badge') %></th>
             </tr>
             </thead>
