--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div class="col-4 text-right px-0">
-                                <img src="../img/say.svg" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer say-logo" data-target="#userModal">
+                                <img src="../img/say.svg" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer say-logo img-fluid" data-target="#userModal">
                         </div>
 
                         <div id="say-p-2" class="col-12 d-none position-absolute px-0" style="bottom:1rem">
@@ -94,7 +94,7 @@
                         </div>
                         <div class="col-4 text-right px-0">
                             <a href="./validator-page.html">
-                                <img src="../img/listen.svg" alt="validator" id="start_validating" class="cursor-pointer listen-logo"></a>
+                                <img src="../img/listen.svg" alt="validator" id="start_validating" class="cursor-pointer listen-logo img-fluid"></a>
                         </div>
                         <div class="col-12 d-none position-absolute px-0" id="listen-p-2" style="bottom:1rem">
                             <div>
