--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -94,6 +94,13 @@ h6,
   }
 }
 
+@media screen and (min-width: 1640px) {
+  .card {
+    background-size:1294px auto;
+  }
+}
+
+
 @media screen and (max-width: 991px) {
   #start_recording, #start_validating {
     width: 120px;
