| priyanshu| fix bronze badge milestone issue for downloading

--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -22,7 +22,7 @@
         <div id="validator-page-content">
             <div class="container-fluid">
                 <div id="content-wrapper" class="d-flex flex-column">
-                    <div class="row justify-content-end">
+                    <div class="row justify-content-end pt-lg-3 pt-sm-2">
                         <div class="report-btn-container">
                             <button class="btn" id="report_btn" type="button">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
