| priyanshu| make 100 hrs goal msg dynamic on thankyou page

--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -121,7 +121,7 @@
     <div class="row justify-content-center mt-5">
         <div class="col-lg-3 col-md-6 col-8 text-center">
             <div class="mb-3">
-                <span><%= __('Help your language achieve it’s goal of 100 hrs. We know you can do more!') %></span>
+                <span><%- __('Help your language achieve it’s goal of <span id="language-hour-goal"></span> hrs. We know you can do more!') %></span>
             </div>
             <a href="./record.html" class="btn btn-primary btn-lg h6 w-100">
                 <%= __('Contribute More') %>
