| priyanshu| make 100 hrs goal dynamic for bulb on thankyou page

--- a/views/badge-info.ejs
+++ b/views/badge-info.ejs
@@ -37,7 +37,9 @@
             <thead class="thead-dark">
             <tr>
                 <th scope="col "><%= __('Level') %></th>
-                <th scope="col "><%= __('Contributions') %></th>
+                <th scope="col ">
+                    <p class="mb-0"><%= __('Contributions') %><br><%= __('(Recording + Validating)')%> </p>
+                </th>
                 <th scope="col "><%= __('Badge') %></th>
             </tr>
             </thead>
