--- a/assets/css/badges.css
+++ b/assets/css/badges.css
@@ -1,45 +1,16 @@
-body {
-    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
 html {
     scroll-behavior: smooth;
-}
-html {
     font-size: 10px;
-}
-.display-5 {
-    font-size: 2rem;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 700;
 }
 @media (min-width: 321px) {
     html {
         font-size: 12px;
-    }
-    .display-5 {
-        font-size: 2.2rem;
     }
 }
 
 @media (min-width: 448px) {
     html {
         font-size: 13px;
-    }
-    .display-5 {
-        font-size: 2.5rem;
     }
 }
 @media (min-width: 576px) {
@@ -48,19 +19,6 @@ h6,
     }
 }
 
-@media (max-width: 768px) {
-    .font-weight-normal-sm {
-        font-weight: 400 !important;
-    }
-    .mt-xs-5{
-        margin-top: 5rem;
-    }
-}
-@media (min-width: 768px) {
-    .font-weight-light-lg {
-        font-weight: 300 !important;
-    }
-}
 @media (min-width: 992px) {
     html {
         font-size: 15px;
@@ -71,107 +29,6 @@ h6,
     html {
         font-size: 16px;
     }
-    .display-5 {
-        font-size: 2.8rem;
-    }
-}
-@media (min-width: 1300px) {
-    .display-5 {
-        font-size: 3rem;
-    }
-}
-@media (min-width: 1400px) {
-    html {
-        font-size: 17px;
-    }
-}
-* {
-    box-sizing: border-box;
-}
-.pb-6 {
-    padding-bottom: 6rem;
-}
-.pt-6 {
-    padding-top: 6rem;
-}
-.p-4-5 {
-    padding: 2rem;
-}
-.mb-6 {
-    margin-bottom: 6rem;
-}
-.mt-n6 {
-    margin-top: -6rem;
-}
-.lh-7 {
-    line-height: 1.7;
-}
-.lh-5 {
-    line-height: 1.5;
-}
-
-.font-wt-900 {
-    font-weight: 900;
-}
-.site-blue {
-    color: #11223f;
-}
-.border-3 {
-    border: 3px solid #007bff;
-}
-.bg-light-blue {
-    background-color: #fbfcff;
-}
-.bg-blue {
-    background-color: #3f80ff;
-}
-.opc-4 {
-    opacity: 0.4;
-}
-.point-none {
-    pointer-events: none;
-}
-.outline-0 {
-    outline: 0;
-}
-.form-control.is-invalid {
-    background-image: none;
-}
-.cursor-pointer {
-    cursor: pointer;
-}
-.oflow-x-hid {
-    overflow-x: hidden;
-}
-.w-90 {
-    width: 90% !important;
-}
-
-.px-6 {
-    padding-right: 6vw !important;
-    padding-left: 6vw !important;
-}
-
-@media screen and (max-width: 480px) {
-    .mt-xs-5 {
-        margin-top: 5rem;
-    }
-    .fs-h4 {
-        font-size: 1.5rem;
-    }
-}
-
-.card{
-    background: #FFFFFF;
-    border: 1px solid #E2E2E2;
-    box-sizing: border-box;
-    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    justify-content: center;
-}
-
-.lh-32{
-    line-height: 32px;
 }
 
 .table-img{
@@ -179,13 +36,26 @@ h6,
     height: auto;
 }
 
-.px-16{
-    padding-right: 16px !important;
-    padding-left: 16px !important;
+@media (max-width: 767px) {
+    .font-weight-normal-sm {
+        font-weight: 400 !important;
+    }
+    .mt-xs-5{
+        margin-top: 5rem;
+    }
+    .popover {
+        width: 180px;
+    }
 }
 
-@media (max-width: 768px) {
-    .font-weight-normal-sm {
+@media (min-width: 768px) and (max-width: 1023px) {
+    .popover {
+        width: 200px;
+    }
+}
+
+@media (min-width: 768px) {
+    .font-weight-light-lg {
         font-weight: 300 !important;
     }
 }
@@ -207,33 +77,10 @@ h6,
     }
 }
 
-@media (min-width: 768px) {
-    .font-weight-light-lg {
-        font-weight: 400 !important;
-    }
-}
-
 @media (max-width: 1240px) {
     .card img {
         width: 150px;
         height: auto;
-    }
-}
-
-.spinner {
-    width: 3rem;
-    height: 3rem;
-    display: inline-block;
-    border-width: 0.5rem;
-    border-color: #007bff;
-    border-top-color: #fff;
-    animation: spin 1s infinite linear;
-    border-radius: 100%;
-    border-style: solid;
-}
-@keyframes spin {
-    100% {
-        transform: rotate(360deg);
     }
 }
 
